# InstantNotes

./: README.md  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs  panel.rs  shortcut.rs  vault.rs
src/lib/: CommandPalette.svelte  Editor.svelte  FileTree.svelte  Logo.svelte  Manager.svelte  Panel.svelte  Settings.svelte  ipc.ts  livePreview.ts  state.svelte.ts
src/routes/: +page.svelte
