[package]
name = "instant-notes"
version = "0.1.0"
description = "Pense-bête markdown rapide pour macOS"
authors = ["sohane"]
edition = "2021"

[lib]
name = "instant_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local git only : pas de https/ssh, donc pas de dépendance openssl.
git2 = { version = "0.20", default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
